--- a/template_poster_portrait.tex
+++ b/template_poster_portrait.tex
@@ -7,6 +7,10 @@
 % Vel (enquiries@latextypesetting.com)
 % LaTeXTypesetting.com
 %
+% For current versions and to report
+% issues, please see:
+% https://github.com/ImperialCollegeLondon/imperial_latex_templates
+%
 %!TEX program = xelatex
 % Note: this template must be compiled with XeLaTeX rather than PDFLaTeX
 % due to the custom fonts used. The line above should ensure this happens
